# liblog

./: .gitignore  CMakeLists.txt  README.md  config.h.in  error.c  initfini.c  local.h  log.c
include/: assure.h  log.h
include/liblog/: assure.h  log.h
